--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,8 @@ $RECYCLE.BIN/
 # Mac desktop service store files
 .DS_Store
 /cocos2d
+/proj.android
+/proj.ios_mac
+/proj.linux
+/proj.wp8-xaml
+/proj.win32/Debug.win32
