--- a/proj.win32/PopStar.vcxproj
+++ b/proj.win32/PopStar.vcxproj
@@ -139,9 +139,16 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\Audio.cpp" />
     <ClCompile Include="..\Classes\Chinese.cpp" />
     <ClCompile Include="..\Classes\ComboEffect.cpp" />
+    <ClCompile Include="..\Classes\Common\SceneStack.cpp" />
+    <ClCompile Include="..\Classes\Common\SingletonContainer.cpp" />
+    <ClCompile Include="..\Classes\Common\Object.cpp" />
+    <ClCompile Include="..\Classes\Common\Timer.cpp" />
     <ClCompile Include="..\Classes\FloatWord.cpp" />
     <ClCompile Include="..\Classes\GameData.cpp" />
     <ClCompile Include="..\Classes\GameLayer.cpp" />
+    <ClCompile Include="..\Classes\GameObject\Component.cpp" />
+    <ClCompile Include="..\Classes\GameObject\DisplayNode.cpp" />
+    <ClCompile Include="..\Classes\GameObject\GameObject.cpp" />
     <ClCompile Include="..\Classes\GameScene.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\LayerChangeUtil.cpp" />
@@ -160,9 +167,17 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\Audio.h" />
     <ClInclude Include="..\Classes\Chinese.h" />
     <ClInclude Include="..\Classes\ComboEffect.h" />
+    <ClInclude Include="..\Classes\Common\IUpdateable.h" />
+    <ClInclude Include="..\Classes\Common\SceneStack.h" />
+    <ClInclude Include="..\Classes\Common\SingletonContainer.h" />
+    <ClInclude Include="..\Classes\Common\Timer.h" />
+    <ClInclude Include="..\Classes\Common\Object.h" />
     <ClInclude Include="..\Classes\FloatWord.h" />
     <ClInclude Include="..\Classes\GameData.h" />
     <ClInclude Include="..\Classes\GameLayer.h" />
+    <ClInclude Include="..\Classes\GameObject\Component.h" />
+    <ClInclude Include="..\Classes\GameObject\DisplayNode.h" />
+    <ClInclude Include="..\Classes\GameObject\GameObject.h" />
     <ClInclude Include="..\Classes\GameScene.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\LevelMsgLayer.h" />
