Fix a bug in SingletonContainer.

--- a/proj.win32/PopStar.vcxproj
+++ b/proj.win32/PopStar.vcxproj
@@ -153,9 +153,10 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\LevelMsgLayer.cpp" />
     <ClCompile Include="..\Classes\Script\PuzzleMatrixLayer.cpp" />
     <ClCompile Include="..\Classes\Script\PuzzleScene.cpp" />
+    <ClCompile Include="..\Classes\Script\StarMatirx.cpp" />
     <ClCompile Include="..\Classes\Script\TitleScene.cpp" />
     <ClCompile Include="..\Classes\Star.cpp" />
-    <ClCompile Include="..\Classes\StarMatrix.cpp" />
+    <ClCompile Include="..\Classes\LegacyStarMatrix.cpp" />
     <ClCompile Include="..\Classes\StarParticle.cpp" />
     <ClCompile Include="..\Classes\TopMenu.cpp" />
     <ClCompile Include="..\Classes\XMLParser.cpp" />
@@ -185,9 +186,10 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\Script\PuzzleMatrixLayer.h" />
     <ClInclude Include="..\Classes\Script\PuzzleScene.h" />
     <ClInclude Include="..\Classes\Script\Script.h" />
+    <ClInclude Include="..\Classes\Script\StarMatrix.h" />
     <ClInclude Include="..\Classes\Script\TitleScene.h" />
     <ClInclude Include="..\Classes\Star.h" />
-    <ClInclude Include="..\Classes\StarMatrix.h" />
+    <ClInclude Include="..\Classes\LegacyStarMatrix.h" />
     <ClInclude Include="..\Classes\StarParticle.h" />
     <ClInclude Include="..\Classes\TopMenu.h" />
     <ClInclude Include="..\Classes\XMLParser.h" />
