--- a/proj.win32/PopStar.vcxproj
+++ b/proj.win32/PopStar.vcxproj
@@ -149,13 +149,13 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\GameObject\Component.cpp" />
     <ClCompile Include="..\Classes\GameObject\DisplayNode.cpp" />
     <ClCompile Include="..\Classes\GameObject\GameObject.cpp" />
+    <ClCompile Include="..\Classes\GameObject\Stepper.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\LevelMsgLayer.cpp" />
     <ClCompile Include="..\Classes\Script\PuzzleMatrixLayer.cpp" />
     <ClCompile Include="..\Classes\Script\PuzzleScene.cpp" />
     <ClCompile Include="..\Classes\Script\StarMatirx.cpp" />
     <ClCompile Include="..\Classes\Script\StatusBar.cpp" />
-    <ClCompile Include="..\Classes\Script\Stepper.cpp" />
     <ClCompile Include="..\Classes\Script\TitleScene.cpp" />
     <ClCompile Include="..\Classes\Star.cpp" />
     <ClCompile Include="..\Classes\LegacyStarMatrix.cpp" />
@@ -183,6 +183,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\GameObject\DisplayNode.h" />
     <ClInclude Include="..\Classes\GameObject\GameObject.h" />
     <ClInclude Include="..\Classes\GameObject\SoundPlayer.h" />
+    <ClInclude Include="..\Classes\GameObject\Stepper.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\LevelMsgLayer.h" />
     <ClInclude Include="..\Classes\Script\PuzzleMatrixLayer.h" />
@@ -190,7 +191,6 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\Script\Script.h" />
     <ClInclude Include="..\Classes\Script\StarMatrix.h" />
     <ClInclude Include="..\Classes\Script\StatusBar.h" />
-    <ClInclude Include="..\Classes\Script\Stepper.h" />
     <ClInclude Include="..\Classes\Script\TitleScene.h" />
     <ClInclude Include="..\Classes\Star.h" />
     <ClInclude Include="..\Classes\LegacyStarMatrix.h" />
