--- a/proj.win32/PopStar.vcxproj.filters
+++ b/proj.win32/PopStar.vcxproj.filters
@@ -102,8 +102,11 @@
     <ClCompile Include="..\Classes\Script\StatusBar.cpp">
       <Filter>Script</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\GameObject\Stepper.cpp">
-      <Filter>GameObjectAndComponent</Filter>
+    <ClCompile Include="..\Classes\Common\SequentialInvoker.cpp">
+      <Filter>Common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Common\SequentialInvokerContainer.cpp">
+      <Filter>Common</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -203,11 +206,14 @@
     <ClInclude Include="..\Classes\Script\StatusBar.h">
       <Filter>Script</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\GameObject\Stepper.h">
-      <Filter>GameObjectAndComponent</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\Event\EventArg1.h">
       <Filter>Event</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Common\SequentialInvoker.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Common\SequentialInvokerContainer.h">
+      <Filter>Common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
