Move the logic of LegacyStar to Star.

--- a/proj.win32/PopStar.vcxproj
+++ b/proj.win32/PopStar.vcxproj
@@ -151,10 +151,11 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\Script\PuzzleMatrixLayer.cpp" />
     <ClCompile Include="..\Classes\Script\PuzzleScene.cpp" />
+    <ClCompile Include="..\Classes\Script\Star.cpp" />
     <ClCompile Include="..\Classes\Script\StarMatrix.cpp" />
     <ClCompile Include="..\Classes\Script\StatusBar.cpp" />
     <ClCompile Include="..\Classes\Script\TitleScene.cpp" />
-    <ClCompile Include="..\Classes\Star.cpp" />
+    <ClCompile Include="..\Classes\LegacyStar.cpp" />
     <ClCompile Include="..\Classes\LegacyStarMatrix.cpp" />
     <ClCompile Include="..\Classes\StarParticle.cpp" />
     <ClCompile Include="main.cpp" />
@@ -183,10 +184,11 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\Script\PuzzleMatrixLayer.h" />
     <ClInclude Include="..\Classes\Script\PuzzleScene.h" />
     <ClInclude Include="..\Classes\Script\Script.h" />
+    <ClInclude Include="..\Classes\Script\Star.h" />
     <ClInclude Include="..\Classes\Script\StarMatrix.h" />
     <ClInclude Include="..\Classes\Script\StatusBar.h" />
     <ClInclude Include="..\Classes\Script\TitleScene.h" />
-    <ClInclude Include="..\Classes\Star.h" />
+    <ClInclude Include="..\Classes\LegacyStar.h" />
     <ClInclude Include="..\Classes\LegacyStarMatrix.h" />
     <ClInclude Include="..\Classes\StarParticle.h" />
     <ClInclude Include="main.h" />
